# game-power-node

./: types.json
.devcontainer/: Dockerfile  devcontainer.json
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/gamepower/: Cargo.toml
pallets/gamepower-nft/: Cargo.toml  types.json
pallets/gamepower-nft/src/: lib.rs
pallets/gamepower/src/: lib.rs
pallets/template/: Cargo.toml  types.json
pallets/template/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
