[package]
authors = ['GamePower Developers']
edition = '2018'
license = 'Unlicense'
name = 'gamepower-nft'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { version = "1.0.111", optional = true }
enumflags2 = { version = "0.6.3" }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
primitives = { package = "gamepower-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    "enumflags2/serde",
]
