[package]
authors = ['Game Power Developers']
edition = '2018'
homepage = 'https://gamepower.network'
license = 'Unlicense'
name = 'gamepower-nft'
repository = 'https://github.com/MikeHuntington/game-power-node/tree/master/pallets/gamepower-nft/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.111", optional = true }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

orml-nft = { default-features = false, version = '0.4.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',

    'orml-nft/std',
]
